set up auth and database 4

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
       <div id="mainContainer" class="container">
         <h3 id='talk'>Bro Quee</h3>
-        
+
       </div>
 
       
@@ -44,7 +44,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.3/velocity.ui.min.js"></script>
 
         <!-- local -->
-        <script src="/firebase-app.js"></script>
+        <script src="/firebase-config.js"></script>
         <script src="js/users.js"></script>
         <script src="js/main.js"></script>
     </body>
