set up auth and database 5

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.3/velocity.ui.min.js"></script>
 
         <!-- local -->
-        <script src="/firebase-config.js"></script>
+        <script src="js/firebase-config.js"></script>
         <script src="js/users.js"></script>
         <script src="js/main.js"></script>
     </body>
