rick roll complete

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,14 @@
       </div>
 
       <div id="mainContainer" class="container">
-        <h3 id='talk'>Bro Queeeeeee</h3>
+        <h3 id='talk' class="text">Bro Queeeeeee</h3>
         <div id="video">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div id="coverup" onclick="playVideo()">
+            <button id="rbutton" class="btn btn-primary"> click to continue </button>
+          </div>
+          <iframe id="frame" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-
+        <h2 id="rickrolled" class="text">¡¡Rick Roll!!</h2>
       </div>
 
       
