automating select menus

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
               <div class="input-group-prepend">
                 <select
                   class="custom-select custom-select-sm" 
-                  id=""
+                  id="clientSelection"
                   data-target=""
                   onchange="">
                     <option value="undefined" class="selectPlaceholder">Cliente</option>
@@ -53,7 +53,7 @@
               <div class="input-group-prepend">
                 <select 
                   class="custom-select custom-select-sm"
-                  id=""
+                  id="productSelection"
                   data-target=""
                   onchange="" 
                   onkeyup="">
