--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,10 @@
         </form>
     </div>
     <div id="appContainer" class="">
-      <div id="square"></div>
-      <div id="rectangle"></div>
+      <div id="content">
+          <div id="square"></div>
+          <div id="rectangle"></div>
+      </div>
     </div>
 
     <span>
@@ -48,9 +50,10 @@
       <script src="js/admins.js"></script>
       <script src="js/Client.js"></script>
       <script src="js/Expense.js"></script>
-      <script src="js/Order.js"></script>
       <script src="js/Status.js"></script>
-      <script src="js/Product.js"></script>
+      <script src="js/cb_FireClass.js"></script>
+      <script src="js/cc_Product.js"></script>
+      <script src="js/cc_Order.js"></script>
       <script src="js/Report.js"></script>
       <script src="js/tables.js"></script>
       <script src="js/customModal.js"></script>
