--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,17 @@
       <script src="js/database.js"></script>
       <script src="js/accounting.js"></script>
       <script src="js/admins.js"></script>
-      <script src="js/Client.js"></script>
-      <script src="js/Expense.js"></script>
       <script src="js/Status.js"></script>
-      <script src="js/cb_FireClass.js"></script>
+      <script src="js/cb_Sheet.js"></script>
       <script src="js/cc_Product.js"></script>
       <script src="js/cc_Order.js"></script>
-      <script src="js/Report.js"></script>
-      <script src="js/tables.js"></script>
+      <script src="js/cc_Expense.js"></script>
+      <script src="js/cc_Client.js"></script>
+      <script src="js/cc_Report.js"></script>
+      <script src="js/render_HTML.js"></script>
+      <script src="js/render_Form.js"></script>
+      <script src="js/render_Card.js"></script>
+      <script src="js/render_Table.js"></script>
       <script src="js/customModal.js"></script>
       <script src="js/forms.js"></script>
       <script src="js/main.js"></script>
