card appears on click

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
       <script src="js/cc_Expense.js"></script>
       <script src="js/cc_Client.js"></script>
       <script src="js/cc_Report.js"></script>
+      <script src="js/ss_Inter.js"></script>
       <script src="js/render_HTML.js"></script>
       <script src="js/render_Form.js"></script>
       <script src="js/render_Card.js"></script>
