--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,10 @@
         </form>
     </div>
     <div id="appContainer" class="">
-      <div id="rectangle" class="hide"></div>
       <div id="content">
+          <div id="rectangle" class="hide"></div>
           <div id="square"></div>
+          <div id="custom-nav"></div>
       </div>
     </div>
 
