--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
       <script src="js/render_Form.js"></script>
       <script src="js/render_Card.js"></script>
       <script src="js/render_Table.js"></script>
+      <script src="js/render_Nav.js"></script>
       <script src="js/customModal.js"></script>
       <script src="js/forms.js"></script>
       <script src="js/main.js"></script>
