--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
   </head>
-
+  <div id="root"></div>
   <body onload="onLoad()">
     <div id="loaderContainer" class="container"></div>
     <div id="siteContainer" class="container">
@@ -49,7 +49,8 @@
       <script src="js/firebase-config.js"></script>
       <script src="js/database.js"></script>
       <script src="js/accounting.js"></script>
-      <script src="js/admins.js"></script>
+      <script src="js/app_admins.js"></script>
+      <script src="js/app_router.js"></script>
       <script src="js/cb_Sheet.js"></script>
       <script src="js/cc_Product.js"></script>
       <script src="js/cc_Order.js"></script>
@@ -63,8 +64,6 @@
       <script src="js/render_Card.js"></script>
       <script src="js/render_Table.js"></script>
       <script src="js/render_Nav.js"></script>
-      <script src="js/customModal.js"></script>
-      <script src="js/forms.js"></script>
       <script src="js/main.js"></script>
     </span>
   </body>
