new page: ventas dia

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,8 @@
       <script src="js/cc_Expense.js"></script>
       <script src="js/cc_Client.js"></script>
       <script src="js/cc_Report.js"></script>
-      <script src="js/cc_Agenda.js"></script>
+      <script src="js/cs_Paid.js"></script>
+      <script src="js/cs_Production.js"></script>
       <script src="js/ss_Inter.js"></script>
       <script src="js/render_HTML.js"></script>
       <script src="js/render_Form.js"></script>
