created Unpaid.js class

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
       <script src="js/cc_Report.js"></script>
       <script src="js/cs_Paid.js"></script>
       <script src="js/cs_Production.js"></script>
+      <script src="js/cs_Unpaid.js"></script>
       <script src="js/ss_Inter.js"></script>
       <script src="js/render_HTML.js"></script>
       <script src="js/render_Form.js"></script>
