--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
       <script src="js/cs_Paid.js"></script>
       <script src="js/cs_Production.js"></script>
       <script src="js/cs_Unpaid.js"></script>
+      <script src="js/cs_Spent.js"></script>
       <script src="js/ss_Inter.js"></script>
       <script src="js/render_HTML.js"></script>
       <script src="js/render_Form.js"></script>
