--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
   </head>
   <div id="root"></div>
   <body onload="onLoad()">
-    <div id="loaderContainer" class="container"></div>
-    <div id="siteContainer" class="container">
+    <div id="printContainer"></div>
+    <div id="siteContainer" class="container hide">
       <!-- @ creo que este return false de abajo no esta haciendo nada -->
         <form onsubmit="signInAdmin(this); return false" class="localForm">
           <div class="form-group">
@@ -26,13 +26,14 @@
           <button type="submit" class="btn btn-primary btnSubmit">Iniciar Sesion</button>
         </form>
     </div>
-    <div id="appContainer" class="">
+    <div id="appContainer" class="hide">
       <div id="content">
           <div id="rectangle" class="hide"></div>
           <div id="square"></div>
           <div id="custom-nav"></div>
       </div>
     </div>
+    
 
     <span>
     <!-- Scripts -->
@@ -59,6 +60,7 @@
       <script src="js/cs_Spent.js"></script>
       <script src="js/ss_Inter.js"></script>
       <script src="js/render_HTML.js"></script>
+      <script src="js/render_Print.js"></script>
       <script src="js/render_Form.js"></script>
       <script src="js/render_Card.js"></script>
       <script src="js/render_Table.js"></script>
