refactored render_Table.js

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       <script src="js/cs_Spent.js"></script>
       <script src="js/ss_Inter.js"></script>
       <script src="js/render_HTML.js"></script>
-      <script src="js/render_Print.js"></script>
+      <!-- <script src="js/render_Print.js"></script> -->
       <script src="js/render_Form.js"></script>
       <script src="js/render_Card.js"></script>
       <script src="js/render_Table.js"></script>
